--- a/src/Page2.html
+++ b/src/Page2.html
@@ -33,14 +33,21 @@
   </div>
 
   <div class="banner">
-    <img src="../media/main_1.png" class="big-image"/>
+    <img src="../media/main_1.png" class="banner-image"/>
   </div>
 
   <div class="container">
     <div class="container-semi">
       <h1 class="header-text">초청연사</h1>
-      <img src="../media/speakers.png" class="big-image"/>
+      <div class="speakers-container">
+        <img src="../media/speakers1.png" class="speakers-mobile" />
+        <img src="../media/speakers2.png" class="speakers-mobile" />
+        <img src="../media/speakers3.png" class="speakers-mobile" />
+        <img src="../media/speakers4.png" class="speakers-mobile" />
+        <img src="../media/speakers5.png" class="speakers-mobile" />
+        <img src="../media/speakers6.png" class="speakers-mobile" />
     </div>
+  </div>
   </div>
 
   <div class="footer">
