--- a/src/Page5.html
+++ b/src/Page5.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="banner">
-    <img src="../media/main_1.png" class="big-image"/>
+    <img src="../media/main_1.png" class="banner-image"/>
   </div>
 
   <div class="container">
